--- a/pom.xml
+++ b/pom.xml
@@ -6,4 +6,24 @@
     <groupId>us.juggl</groupId>
     <artifactId>hello</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>us.juggl.hello.Hello</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
