--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>us.juggl</groupId>
     <artifactId>hello</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
